--- a/pagina1.html
+++ b/pagina1.html
@@ -51,6 +51,9 @@
     </ol>
     <h2>SHORES</h2>
     <ul>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit.</li>
+        <li>Lorem ipsum dolor sit amet consectetur.</li>
         <li>Lorem ipsum dolor sit amet consectetur.</li>
         <li>Lorem ipsum dolor sit.</li>
     </ul>
